# flowsense

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release-please.yml
docker/: entrypoint.sh
docs/: spec.md
scripts/: ci-local.sh  docker-bridge-test.sh  smoke-test.sh
src/: capture.rs  config.rs  dns.rs  dns_cache.rs  emit.rs  error.rs  flow.rs  lib.rs  main.rs  parser.rs  protocol.rs  signal.rs  time.rs
src/detect/: drop.rs  injection.rs  mod.rs  throughput.rs
tests/: protocol_test.rs  test_dns.rs  test_drop.rs  test_false_positives.rs  test_flow.rs  test_injection.rs  test_parser.rs  test_throughput.rs
tests/helpers/: mod.rs
