[package]
name = "flowsense"
version = "0.1.0"
edition = "2021"
description = "Passive DPI interference detector for Linux L2 bridges"
license = "MIT"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[features]
pcap = ["dep:pcap-parser"]

[dependencies.pcap-parser]
version = "0.16"
optional = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
